--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta charset="UTF-8">
-  <title>Multiplication v1</title>
-  <link rel="stylesheet" type="text/css" href="styles.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-  <script src="multiplication-client.js"></script>
+    <meta charset="UTF-8">
+    <title>Multiplication v1</title>
+    <link rel="stylesheet" type="text/css" href="styles.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+    <script src="multiplication-client.js"></script>
 </head>
 
 <body>
@@ -23,6 +23,16 @@
   </form>
   </p>
   <h2><span class="result-message"></span></h2>
+  <h2>통계</h2>
+  <table id="stats" style="width:100%">
+    <tr>
+      <th>답안 ID</th>
+      <th>곱셈</th>
+      <th>입력한 값</th>
+      <th>정답?</th>
+    </tr>
+    <tbody id="stats-body"></tbody>
+  </table>
 </div>
 </body>
 </html>
